# Portfolio-Analysis

./: .gitignore  .pre-commit-config.yaml  AVTM_Factor_Analysis.ipynb  Basic_Portfolio_Analysis.ipynb  CLAUDE.md  Factor_Analysis_Demo.ipynb  Interactive_Portfolio_Analysis.ipynb  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-streamlit.txt  requirements.txt  setup.py
.github/workflows/: docs.yml  publish.yml  tests.yml
Tutorials/: Asset_Correlations.ipynb  Beginner's_Guide_to_Contributing_to_the_Portfolio_Analysis_Repository.ipynb  Portfolio_Analysis_Using_QuantStats_and_yfinance.ipynb
Visualization/: Financial_Independence_(FI)_Goals_and_Net_Worth_Visualization.ipynb  Portfolio_Allocation_Pie_Chart.ipynb  Visualize_the_Equity_Style_Box.ipynb
docs/: ROADMAP_V2.md  changelog.md  contributing.md  index.md
docs/api/: analysis.md  data.md  factors.md  index.md  metrics.md  optimization.md  visualization.md
docs/examples/: basic-portfolio.md  factor-analysis.md  optimization.md
docs/getting-started/: installation.md  quickstart.md  tutorials.md
docs/javascripts/: mathjax.js
docs/user-guide/: factor-models.md  optimization.md  portfolio-analysis.md  reporting.md
portfolio_analysis/: __init__.py  constants.py  exceptions.py
portfolio_analysis/analysis/: __init__.py  montecarlo.py  optimization.py  portfolio.py
portfolio_analysis/backtest/: __init__.py  engine.py  metrics.py  strategy.py  visualization.py
portfolio_analysis/data/: __init__.py  loader.py
portfolio_analysis/factors/: __init__.py  attribution.py  composite.py  data.py  exposures.py  models.py  optimization.py  visualization.py
portfolio_analysis/metrics/: __init__.py  benchmark.py  performance.py
portfolio_analysis/reporting/: __init__.py  chart_utils.py  report_builder.py
portfolio_analysis/reporting/sections/: __init__.py  base.py  benchmark.py  drawdown.py  header.py  performance.py  returns.py  risk.py
portfolio_analysis/reporting/templates/: base.html
portfolio_analysis/reporting/templates/sections/: benchmark.html  drawdown.html  header.html  performance.html  returns_heatmap.html  risk_metrics.html
portfolio_analysis/utils/: __init__.py  helpers.py
portfolio_analysis/visualization/: __init__.py  interactive.py  plots.py
streamlit_app/: app.py  requirements.txt
tests/: __init__.py  test_edge_cases.py  test_factors.py  test_montecarlo.py  test_optimization.py  test_portfolio.py  test_reporting.py
